Added wrapper Class around funcs

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/rudreshsolanki97/single-instance-web3.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "rudreshsolanki97",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rudreshsolanki97/single-instance-web3/issues"
